Sredjene rute, update dokumentacija
